--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -36,7 +36,7 @@
     <ul class="navbar-nav ms-auto">
       <% if (isAuth) { %>
       <li class="nav-item">
-        <a href="/account/index" class="nav-link"><%= fullname %> </a>
+        <a href="/account/profile" class="nav-link"><%= fullname %> </a>
       </li>
       <li class="nav-item">
         <a href="/account/logout" class="nav-link">Logout</a>
