--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-dark bg-primary navbar-expand-lg">
+<nav class="navbar navbar-dark  bg-success navbar-expand-lg">
   <div class="container">
-    <a href="/" class="navbar-brand">Blogapp</a>
+    <a href="/" class="navbar-brand">Yuce-Haydar</a>
     <ul class="navbar-nav me-auto">
       <li class="nav-item">
-        <a href="/blogs" class="nav-link">Blog Listesi</a>
+        <a href="/blogs" class="nav-link">YAZILAR</a>
       </li>
 
       <% if (isAdmin || isModerator) { %>
