--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,59 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <%- include("../partials/head") %>
-  </head>
-  <body>
+    <style>
+      body{
+        background-color: #f8f9fa;
+      }
+        .hizala {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .form-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+          
+            padding: 10px;
+            width: 400px;
+            background-color: #ffff;
+            border-radius: 5px;
+        }
+
+        .form-container label {
+            margin-bottom: 5px;
+        }
+
+        .form-container input[type="text"],
+        .form-container input[type="password"],
+        .form-container input[type="email"] {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ced4da;
+            border-radius: 4px;
+            margin-bottom: 10px;
+        }
+
+        .form-container button {
+            width: 100%;
+            padding: 10px;
+           
+            border-radius: 10px;
+            background-color: white;
+            color: green  ;
+        }
+
+        .form-container button:hover{
+         
+          background-color: green;
+            color: white  ;
+            transition-duration: 0.5s;
+        }
+
+        .notification-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
+            position: absolute;
+            top: 50px;
+            left: 0;
+            right: 0;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
     <%- include("../partials/nav") %>
 
-    <div class="container mt-3">
-      <div class="row">
-        <div class="col-md-12 mt-3">
-          <% if (typeof message != "undefined") { %>
-          <div class="alert alert-<%= message.class %>">
-            <%= message.text %>
-          </div>
-          <% } %>
-          <form method="post">
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-            <div class="row mb-3">
-              <label for="baslik" class="col-sm-2 col-form-label">Name</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="name" name="name" />
-              </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 hizala">
+                <form method="post" class="form-container">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" />
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" />
+
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" />
+
+                    <button type="submit">Kayit Ol</button>
+                </form>
+
+                <% if (typeof message != "undefined") { %>
+                <div class="notification-container alert alert-<%= message.class %>">
+                    <%= message.text %>
+                </div>
+                <% } %>
             </div>
-            <div class="row mb-3">
-              <label for="baslik" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="email"
-                  name="email"
-                />
-              </div>
-            </div>
-            <div class="row mb-3">
-              <label for="baslik" class="col-sm-2 col-form-label"
-                >password</label
-              >
-              <div class="col-sm-10">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="password"
-                  name="password"
-                />
-              </div>
-            </div>
-            <div class="row mb-3">
-              <div class="col-sm-8 offset-sm-2">
-                <button type="submit" class="btn btn-primary">Kaydet</button>
-              </div>
-            </div>
-          </form>
         </div>
-      </div>
     </div>
-  </body>
+</body>
 </html>
