--- a/views/partials/blog-card.ejs
+++ b/views/partials/blog-card.ejs
@@ -1,7 +1,7 @@
-<div class="card mb-3">
-  <div class="row">
-    <div class="col-md-4">
-      <img src="/static/images/<%=resim %>" class="img-fluid" alt="" />
+<div class="card mb-3 " style="height: 150px;">
+  <div class="row ">
+    <div class="col-md-4  ">
+      <img src="/static/images/<%=resim %>" class="img-thumbnail" style="height: 150px;" alt="" />
     </div>
     <div class="col-md-8">
       <div class="card-body">
