--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,6 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="../../static/css/genelcss.css">
 <style>
   .ck-editor__editable_inline {
     min-height: 300px;
