--- a/views/users/blog-details.ejs
+++ b/views/users/blog-details.ejs
@@ -2,74 +2,103 @@
 <html lang="en">
   <head>
     <%- include("../partials/head") %>
+    <link rel="stylesheet" href="../../static/css/blogdetails.css">
   </head>
   <body>
     <%- include("../partials/nav") %>
-
-    <div class="container mt-3">
+    <% if (typeof message != "undefined") { %>
+      <div class=" notification-container alert alert-<%= message.class %>">
+        <%= message.text %>
+      </div>
+      <% } %>
+    <div class="container mt-3 w-50">
       <div class="card">
-        <div class="card-body">
+        <div class="card-body ">
           <div class="row">
-            <div class="col-md-4">
-              <img
-                src="/static/images/<%=blog.resim%>"
-                class="img-fluid"
-                alt=""
-              />
-            </div>
-            <div class="col-md-8">
+            <div class="col-md-12 text-center">
               <h1 class="h3 mb-3"><%= blog.baslik %></h1>
               <p><%= blog.altbaslik %></p>
             </div>
+            <div class="col-md-12 d-flex justify-content-center">
+              <img
+                src="/static/images/<%=blog.resim%>"
+                class=""
+                alt=""
+                width="100%"
+                height="200px"
+              />
+            </div>
           </div>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 ps-5">
               <p><%- blog.aciklama %></p>
             </div>
           </div>
         </div>
       </div>
-      <hr>
-      <h3>Yorumlar</h3>
-      <div class="card">
+      <hr />
+
+      <div class="card border-0">
         <div class="card-body">
-          <div class="row ">
-         
-            <% comment.forEach(element => { %>
-            <div class="d-flex   ">
-              <div class="w-25">
-                <img src="../../static/images/1f78df92d5570b667330216ae62474a6--bir-search-1681152356187.jpg" class=" w-100 rounded-3" alt="">
-                <p class="text-center"><%= element.user.fullname %></p>
-                
-             
-               </div>
-              <div class="w-100 ps-3">
-                <p><%= element.content %></p>
-              </div>
-            </div>
-              <hr>
-            <% }) %>
-          </div>
-       
+        
+          <h3>Yorum Yap</h3>
+      
+
+
+
+          <form method="post" action="" class="d-flex justify-content-between">
+            <input name="content"  type="text" class="w-100 commentinput " placeholder="yorumunuzu buraya giriniz" />
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+            <input
+              name="blogid"
+              type="hidden"
+              class="w-100  "
+              value="<%= blog.id %>"
+            />
+            <button type="submit" class="btn btn-success commentbutton">Yorum yap</button>
+          </form>
         </div>
       </div>
       <hr>
-      <h3>Yorum Yap</h3>
-      <div class="card">
-        <div  class="card-body ">
-         <form  method="post" action=""
-            class=" d-flex justify-content-between ">
-          <input name="content" type="text" class="w-100" > </input>
-          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-          <input name="blogid" type="hidden" class="w-100" value="<%= blog.id %>
-          " > </input>
-            <button type="submit" class="btn btn-success">Yorum yap </button> 
-         </form>
+      <h3 class="font-monospace">Yorumlar</h3>
+     <% if (comment.length<1) { %>
+      <div class=" notification-container alert alert-warning">
+        <p>Henuz Yorum Yapilmamistir</p>
+      </div>
+     <% } %>
+      <div class="card border-0">
+        <div class="card-body">
+          <div class="row p-0">
+          
+            <% comment.forEach(element => { %>
+              <%= console.log(element) %>
+              <div class=" d-flex justify-content-between ">
+                <div class=" d-flex  yorum-sol-kisim  ">
+                  <img
+                    src="../../static/images/1f78df92d5570b667330216ae62474a6--bir-search-1681152356187.jpg"
+                    class="yorum-img"
+                    alt="avatar resim"
+                  />
+                  <p class="text-center"><%= element.user.fullname %></p>
+                </div>
+                <div class="w-100 ps-3 yorum  ">
+                  <p><%= element.content %></p>
+                </div>
+                <div class="yorum-tarih">
+                  <%= element.createdAt.toUTCString() %>
+                </div>
+               
+            
+               </div>
+            <hr class="">
+              <% }) %>
+      
+     
           </div>
-         
         </div>
       </div>
-    
+  
+     
     </div>
   </body>
 </html>
