--- a/views/users/blogs.ejs
+++ b/views/users/blogs.ejs
@@ -5,22 +5,27 @@
   </head>
   <body>
     <%- include("../partials/nav") %>
-
+   
     <div class="container mt-3">
+    
       <div class="row">
+        
         <div class="col-md-3">
+          <h3 class="text-center">Kategoriler</h3>
           <%- include("../partials/category-menu", { categories,
           selectedCategory } ) %>
         </div>
         <div class="col-md-9">
-          <h1 class="h3 mb-3"><%= title %></h1>
-
+          <h1 class="h3 mb-3"><%= selectedCategory?`${selectedCategory+" yazıları"}`:"Tüm Yazılar"%></h1>
+     
           <% if (blogs.length == 0) { %> <%- include("../partials/no-products")
           %> <% } %> <% blogs.forEach(blog => { %> <%-
-          include("../partials/blog-card", blog) %> <% }) %> <%-
-          include("../partials/pagination")%>
+          include("../partials/blog-card", blog) %> <% }) %> <%- include("../partials/pagination")%>
         </div>
       </div>
+    </div>
+    <div style="position: relative ; bottom: 0; width: 100%; ">
+      <%-include("../partials/footer.ejs") %>
     </div>
   </body>
 </html>
