--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,24 +1,35 @@
-<style>
-  .footer{
-    width: 100%;
-    height: auto;
-    background-color:#198754;
-   padding: 20px;
-
-   bottom: 0px;
-    text-align: center;
-  }
-  .footer-p{
-    color: white;
-    font-size: 20px;
-  }
-  .footer-p a{
-    color: rgb(0, 166, 255);
-    font-size: 20px;
-  }
-</style>
-<footer class="footer ">
-  <div class="sol">
- <p class="footer-p ">  Made by With <a href="https://github.com/yuce-haydar"> Yuce-Haydar</a></p>
+<footer class="border-top">
+  <div class="container px-4 px-lg-5">
+      <div class="row gx-4 gx-lg-5 justify-content-center">
+          <div class="col-md-10 col-lg-8 col-xl-7">
+              <ul class="list-inline text-center">
+                  <li class="list-inline-item">
+                      <a href="#!">
+                          <span class="fa-stack fa-lg">
+                              <i class="fas fa-circle fa-stack-2x"></i>
+                              <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                          </span>
+                      </a>
+                  </li>
+                  <li class="list-inline-item">
+                      <a href="#!">
+                          <span class="fa-stack fa-lg">
+                              <i class="fas fa-circle fa-stack-2x"></i>
+                              <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                          </span>
+                      </a>
+                  </li>
+                  <li class="list-inline-item">
+                      <a href="#!">
+                          <span class="fa-stack fa-lg">
+                              <i class="fas fa-circle fa-stack-2x"></i>
+                              <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                          </span>
+                      </a>
+                  </li>
+              </ul>
+              <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+          </div>
+      </div>
   </div>
 </footer>
