--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -85,6 +85,11 @@
   box-sizing: border-box;
 }
 
+.custom-toast-class {
+  background-color: #ff5733; /* Özel arka plan rengi (örnek olarak kırmızı) */
+  color: #fff; /* Yazı rengi (örnek olarak beyaz) */
+  /* Diğer stil özellikleri burada ekleyebilirsiniz */
+}
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
@@ -10586,19 +10591,24 @@ blockquote {
 }
 
 #mainNav {
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   right: 0;
   z-index: 1030;
   border-bottom: 1px solid #dee2e6;
-  background-color: #fff;
+  background-color: #000;
+
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+#mainNav a{
+  color: burlywood;
 }
 #mainNav .navbar-brand {
   font-weight: 800;
 }
 #mainNav .navbar-toggler {
+  color: burlywood;
   font-size: 0.75rem;
   font-weight: 800;
   padding: 0.75rem;
@@ -10613,7 +10623,7 @@ blockquote {
 @media (min-width: 992px) {
   #mainNav {
     border-bottom: 1px solid transparent;
-    background: transparent;
+    background: #000;
   }
   #mainNav .navbar-brand {
     color: #fff;
@@ -10622,7 +10632,7 @@ blockquote {
     color: rgba(255, 255, 255, 0.8);
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link {
-    color: #fff;
+    color: wheat;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link:hover {
     color: rgba(255, 255, 255, 0.8);
