--- a/views/partials/blog-card.ejs
+++ b/views/partials/blog-card.ejs
@@ -1,4 +1,4 @@
-<div class="card mb-3 " style="height: 150px;">
+<!-- <div class="card mb-3 " style="height: 150px;">
   <div class="row ">
     <div class="col-md-4  ">
       <img src="/static/images/<%=resim %>" class="img-thumbnail" style="height: 150px;" alt="" />
@@ -14,4 +14,18 @@
       </div>
     </div>
   </div>
+</div> -->
+<div class="post-preview">
+  <a href="post.html">
+      <h2 class="post-title"> <a style="text-decoration: none" href="/blogs/<%= url %>">
+        <%= baslik %></h2>
+        <p class="card-text"><%= altbaslik %></p>
+  </a>
+  <!-- <p class="post-meta">
+      Posted by
+      <a href="#!">Start Bootstrap</a>
+      on September 24, 2023 
+  </p>-->
 </div>
+<!-- Divider-->
+<hr class="my-4" />
