--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="../../static/css/genelcss.css">
+<link rel="stylesheet" href="../../static/css/styles.css">
+<script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.11.1/toastify.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.11.1/toastify.min.js"></script>
+
 <style>
   .ck-editor__editable_inline {
     min-height: 300px;
